[gd_scene load_steps=12 format=3 uid="uid://bbokc2ymbgdrt"]

[ext_resource type="Script" path="res://ScenesDebut.gd" id="1_urf3o"]
[ext_resource type="Texture2D" uid="uid://4hge11xhdpvk" path="res://Télécom Paris/Scène1.png" id="2_4c031"]
[ext_resource type="Texture2D" uid="uid://crtk8i2vjnihb" path="res://Télécom Paris/Retour.png" id="3_awjhe"]
[ext_resource type="Texture2D" uid="uid://c0xdknjuquaml" path="res://Télécom Paris/Scène2.png" id="4_tkauq"]
[ext_resource type="Texture2D" uid="uid://bfysfmb4j08x0" path="res://Télécom Paris/Scène3.png" id="5_gkend"]
[ext_resource type="Texture2D" uid="uid://bof8y6ca3k0kb" path="res://Télécom Paris/Scène4.png" id="6_vnsft"]
[ext_resource type="Texture2D" uid="uid://84ssatm64upa" path="res://Télécom Paris/Scène5.png" id="7_v32uu"]
[ext_resource type="Texture2D" uid="uid://bqiik6d4w87jx" path="res://Télécom Paris/Scène6.png" id="8_00j67"]
[ext_resource type="Texture2D" uid="uid://c61vxxekbxreo" path="res://Télécom Paris/Scène7.png" id="9_tnihq"]
[ext_resource type="Texture2D" uid="uid://dtxrf71t7o2ge" path="res://Télécom Paris/Scène8.png" id="10_fax0n"]
[ext_resource type="Texture2D" uid="uid://bfkx5wtfdrfps" path="res://Télécom Paris/Scène9.png" id="11_rdl20"]

[node name="ScenesDebut" type="Node2D"]
position = Vector2(192, -242)
script = ExtResource("1_urf3o")

[node name="Scène1" type="Sprite2D" parent="."]
position = Vector2(391, 566)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_4c031")

[node name="Retour" type="Sprite2D" parent="Scène1"]
position = Vector2(611.25, 327.5)
rotation = -3.13669
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_awjhe")

[node name="TextureButton" type="TextureButton" parent="Scène1/Retour"]
offset_left = -341.662
offset_top = -338.33
offset_right = -301.662
offset_bottom = -298.33
scale = Vector2(15, 15)

[node name="Scène2" type="Sprite2D" parent="."]
position = Vector2(400, 702)
scale = Vector2(0.9, 0.9)
texture = ExtResource("4_tkauq")

[node name="Retour" type="Sprite2D" parent="Scène2"]
position = Vector2(507.778, 131.111)
rotation = -3.13669
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_awjhe")

[node name="TextureButton" type="TextureButton" parent="Scène2/Retour"]
offset_left = -339.429
offset_top = -336.119
offset_right = -299.429
offset_bottom = -296.119
scale = Vector2(15, 15)

[node name="Scène3" type="Sprite2D" parent="."]
position = Vector2(400, 702)
scale = Vector2(0.9, 0.9)
texture = ExtResource("5_gkend")

[node name="Retour" type="Sprite2D" parent="Scène3"]
position = Vector2(510, 127.778)
rotation = -3.13669
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_awjhe")

[node name="TextureButton" type="TextureButton" parent="Scène3/Retour"]
offset_left = -341.662
offset_top = -338.33
offset_right = -301.662
offset_bottom = -298.33
scale = Vector2(15, 15)

[node name="Scène4" type="Sprite2D" parent="."]
position = Vector2(400, 702)
scale = Vector2(0.9, 0.9)
texture = ExtResource("6_vnsft")

[node name="Retour" type="Sprite2D" parent="Scène4"]
position = Vector2(511.111, 121.111)
rotation = -3.13669
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_awjhe")

[node name="TextureButton" type="TextureButton" parent="Scène4/Retour"]
offset_left = -341.662
offset_top = -338.33
offset_right = -301.662
offset_bottom = -298.33
scale = Vector2(15, 15)

[node name="Scène5" type="Sprite2D" parent="."]
position = Vector2(381, 306)
scale = Vector2(0.83, 0.83)
texture = ExtResource("7_v32uu")

[node name="Retour" type="Sprite2D" parent="Scène5"]
position = Vector2(573.494, 604.819)
rotation = -3.13669
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_awjhe")

[node name="TextureButton" type="TextureButton" parent="Scène5/Retour"]
offset_left = -341.662
offset_top = -338.33
offset_right = -301.662
offset_bottom = -298.33
scale = Vector2(15, 15)

[node name="Scène6" type="Sprite2D" parent="."]
position = Vector2(381, 306)
scale = Vector2(0.83, 0.83)
texture = ExtResource("8_00j67")

[node name="Retour" type="Sprite2D" parent="Scène6"]
position = Vector2(573.494, 606.024)
rotation = -3.13669
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_awjhe")

[node name="TextureButton" type="TextureButton" parent="Scène6/Retour"]
offset_left = -341.662
offset_top = -338.33
offset_right = -301.662
offset_bottom = -298.33
scale = Vector2(15, 15)

[node name="Scène7" type="Sprite2D" parent="."]
position = Vector2(381, 306)
scale = Vector2(0.83, 0.83)
texture = ExtResource("9_tnihq")

[node name="Retour" type="Sprite2D" parent="Scène7"]
position = Vector2(574.699, 606.024)
rotation = -3.13669
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_awjhe")

[node name="TextureButton" type="TextureButton" parent="Scène7/Retour"]
offset_left = -341.662
offset_top = -338.33
offset_right = -301.662
offset_bottom = -298.33
scale = Vector2(15, 15)

[node name="Scène8" type="Sprite2D" parent="."]
position = Vector2(381, 306)
scale = Vector2(0.83, 0.83)
texture = ExtResource("10_fax0n")

[node name="TextureButton" type="TextureButton" parent="Scène8"]
offset_left = 443.373
offset_top = 26.506
offset_right = 483.373
offset_bottom = 66.506
scale = Vector2(2.26365, 9.07722)

[node name="TextureButton2" type="TextureButton" parent="Scène8"]
offset_left = -538.554
offset_top = 25.3012
offset_right = -498.554
offset_bottom = 65.3012
scale = Vector2(2.26365, 9.07722)

[node name="Scène9" type="Sprite2D" parent="."]
position = Vector2(367, 578)
scale = Vector2(0.8, 0.8)
texture = ExtResource("11_rdl20")

[node name="Retour" type="Sprite2D" parent="Scène9"]
position = Vector2(-590, 306.25)
rotation = 0.00315921
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_awjhe")

[node name="TextureButton" type="TextureButton" parent="Scène9/Retour"]
offset_left = -341.662
offset_top = -338.33
offset_right = -301.662
offset_bottom = -298.33
scale = Vector2(15, 15)

[connection signal="pressed" from="Scène1/Retour/TextureButton" to="." method="_on_texture_button_pressed1"]
[connection signal="pressed" from="Scène2/Retour/TextureButton" to="." method="_on_texture_button_pressed2"]
[connection signal="pressed" from="Scène3/Retour/TextureButton" to="." method="_on_texture_button_pressed3"]
[connection signal="pressed" from="Scène4/Retour/TextureButton" to="." method="_on_texture_button_pressed4"]
[connection signal="pressed" from="Scène5/Retour/TextureButton" to="." method="_on_texture_button_pressed5"]
[connection signal="pressed" from="Scène6/Retour/TextureButton" to="." method="_on_texture_button_pressed6"]
[connection signal="pressed" from="Scène7/Retour/TextureButton" to="." method="_on_texture_button_pressed7"]
[connection signal="pressed" from="Scène8/TextureButton" to="." method="_on_texture_button_pressed_placard"]
[connection signal="pressed" from="Scène8/TextureButton2" to="." method="_on_texture_button_pressed_passage_au_main"]
[connection signal="pressed" from="Scène9/Retour/TextureButton" to="." method="_on_texture_button_pressed_placard_retour"]
